--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "YouTube Comment Marks",
-  "description": "Show comment timestamps as markers on the YouTube seek bar.",
+  "default_locale": "en",
+  "name": "__MSG_extName__",
+  "description": "__MSG_extDesc__",
   "version": "0.1.0",
   "host_permissions": ["https://www.youtube.com/*"],
   "content_scripts": [
@@ -19,6 +20,6 @@
     "128": "icons/icon128.png"
   },
   "action": {
-    "default_title": "YouTube Comment Marks"
+    "default_title": "__MSG_actionTitle__"
   }
 }
