manifest.jsonのURLマッチパターンを修正し、content.js内のログ機能を再有効化。コメントセクションの監視機能を強化し、動画の準備が整った際にコメントをスキャンする処理を追加。

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "host_permissions": ["https://www.youtube.com/*"],
   "content_scripts": [
     {
-      "matches": ["https://www.youtube.com/watch*"],
+      "matches": ["https://www.youtube.com/*"],
       "js": ["src/content.js"],
       "css": ["src/overlay.css"],
       "run_at": "document_idle"
